syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.starter.gprc";
option java_outer_classname = "LoginProto";
package helloworld;

service Login {
  rpc Login (LoginRequest) returns (LoginReply) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string sessionToken = 3;
}

message LoginReply {
  string sessionToken = 1;
}
